@@ -27,6 +27,7 @@
 The following new features and notable changes since version 0.29.0 are included in this release:
 
 - [New binaries and changes to supported environments](#binaries-and-supported-environments)
+- ![Start of content that applies to Java 17 plus](cr/java17plus.png) [New JDK 17 features](#new-jdk-17-features)
 
 ## Features and changes
 
@@ -37,6 +38,40 @@ OpenJ9 release 0.29.1 supports OpenJDK 17.
 AArch64 Linux is now a fully supported, production-ready target for OpenJDK 17.
 
 To learn more about support for OpenJ9 releases, including OpenJDK levels and platform support, see [Supported environments](openj9_support.md).
+
+### ![Start of content that applies to Java 17 plus](cr/java17plus.png) New JDK 17 features
+
+The following features are supported by OpenJ9:
+
+- [JEP 409](https://openjdk.java.net/jeps/409): Sealed Classes
+    - Promoted from preview to a production-ready feature in this release.
+- [JEP 411](https://openjdk.java.net/jeps/411): Deprecate the Security Manager for Removal
+
+The following features will be supported by OpenJ9 in a future release:
+
+- [JEP 391](https://openjdk.java.net/jeps/391): macOS/AArch64 Port
+- [JEP 412](https://openjdk.java.net/jeps/412): Foreign Function & Memory API (Incubator)
+- [JEP 414](https://openjdk.java.net/jeps/414): Vector API (Second Incubator)
+
+The following features are implemented in OpenJDK and available in any build of OpenJDK 17 with OpenJ9:
+
+- [JEP 306](https://openjdk.java.net/jeps/306): Restore Always-Strict Floating-Point Semantics
+
+- [JEP 356](https://openjdk.java.net/jeps/356): Enhanced Pseudo-Random Number Generators
+- [JEP 382](https://openjdk.java.net/jeps/382): New macOS Rendering Pipeline
+- [JEP 398](https://openjdk.java.net/jeps/398): Deprecate the Applet API for Removal
+- [JEP 403](https://openjdk.java.net/jeps/403): Strongly Encapsulate JDK Internals
+- [JEP 406](https://openjdk.java.net/jeps/406): Pattern Matching for switch (Preview)
+- [JEP 407](https://openjdk.java.net/jeps/407): Remove RMI Activation
+- [JEP 415](https://openjdk.java.net/jeps/415): Context-Specific Deserialization Filters
+
+You can find the full list of features for JDK 17 at the [OpenJDK project](http://openjdk.java.net/projects/jdk/17/).
+Any remaining features that are listed do not apply to OpenJ9.
+
+:fontawesome-solid-pencil-alt:{: .note aria-hidden="true"} **Note:** Applications might be adversely affected by JEP 403
+if they make use of internal APIs. You should update your application to use standard APIs. To temporarily work around
+this problem, use `--add-opens`, `--add-exports` on the command line for each package required.
+
 
 ## Full release information
 
